--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <section class="banner" id="home">
             <div class="textBx">
-                <h2>Hello, I'm<br><span>Krishnanunni M.</span></h2>
+                <h2>Hello, I'm<br><span>Richard Joy.</span></h2>
                 <h3>I'm a Front End Web Developer.</h3>
                 <a href="#about" class="btn">About Me</a>
             </div>
