--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <body>
         <header>
             <a href="#" class="logo">Portfolio</a>
-            <div class="toggle"></div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#testimonial">Testimonial</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <div class="toggle" onclick="toggleMenu();"></div>
+            <ul class="menu">
+                <li><a href="#home" onclick="toggleMenu();">Home</a></li>
+                <li><a href="#about" onclick="toggleMenu();">About</a></li>
+                <li><a href="#services" onclick="toggleMenu();">Services</a></li>
+                <li><a href="#work" onclick="toggleMenu();">Work</a></li>
+                <li><a href="#testimonial" onclick="toggleMenu();">Testimonial</a></li>
+                <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
             </ul>
         </header>
         <section class="banner" id="home">
             <div class="textBx">
-                <h2>Hello, I'm<br><span>Richard Joy.</span></h2>
+                <h2>Hello, I'm<br><span>Krishnanunni M.</span></h2>
                 <h3>I'm a Front End Web Developer.</h3>
                 <a href="#about" class="btn">About Me</a>
             </div>
@@ -200,6 +200,12 @@
             var header=document.querySelector('header');
             header.classList.toggle('sticky', window.scrollY > 0);
         });
+        function toggleMenu(){
+            var menuToggle=document.querySelector('.toggle');
+            var menu=document.querySelector('.menu');
+            menuToggle.classList.toggle('active')
+            menu.classList.toggle('active')
+        }
         </script>
     </body>
 </html>
