joseph site update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <h3>Joseph T Joshy</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                          tempor incididunt ut labore et dolore magna aliqua.</p>
-                         <a href="https://yz1gydicyyc6yewffx5tsw-on.drv.tw/www.josephtjoshy.com/#/">View Profile</a>
+                         <a href="bit.ly/josephprofile">View Profile</a>
                     </div>
                 </div>
             </div>
