--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>RJK PROFILES</title>
-        <link rel="stylesheet" href="cards.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="card">
-                <div class="box">
-                    <div class="content">
-                        <h2>R</h2>
-                        <h3>Richard Joy</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                         tempor incididunt ut labore et dolore magna aliqua.</p>
-                         <a href="https://github.com/richardjoy530">View Profile</a>
-                    </div>
-                </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="loadingpage.css">
+</head>
+<body>
+    <div class="line">
+            <div class="pen">
+                <div class="pen_overlay"></div>
+                <div class="pen_top"></div>
+                <div class="pen_bottom"></div>
             </div>
-            <div class="card">
-                <div class="box">
-                    <div class="content">
-                        <h2>J</h2>
-                        <h3>Joseph T Joshy</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                         tempor incididunt ut labore et dolore magna aliqua.</p>
-                         <a href="http://josephtjoshy.epizy.com/?i=1">View Profile</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <div class="content">
-                        <h2>K</h2>
-                        <h3>Krishnanunni M</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                         tempor incididunt ut labore et dolore magna aliqua.</p>
-                         <a href="kmportfolio.html">View Profile</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+    </div>
+    <span>Page is Loading...Please Wait</span>
+    <script>
+        setTimeout(function(){
+            window.location.href = 'cards.html';
+        },10000);
+    </script>
+</body>
 </html>
