--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html" class="logo">Portfolio</a>
+            <a href="cards.html" class="logo">Portfolio</a>
             <div class="toggle" onclick="toggleMenu();"></div>
             <ul class="menu">
                 <li><a href="#home" onclick="toggleMenu();">Home</a></li>
