--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -108,7 +108,7 @@
             </div>
             <div class="content">
                 <div class="workBx">
-                    <img src="product1.jpg">
+                    <a href="google.co.in"><img src="product1.jpg"></a>
                 </div>
                 <div class="workBx">
                     <img src="product2.jpg">
