--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -108,13 +108,13 @@
             </div>
             <div class="content">
                 <div class="workBx">
-                    <a href="https://www.google.com/"><img src="product1.jpg"></a>
+                    <a href="#"><img src="product1.jpg"></a>
                 </div>
                 <div class="workBx">
-                    <img src="product2.jpg">
+                    <a href="#"><img src="product2.jpg"></a>
                 </div>
                 <div class="workBx">
-                    <img src="product3.jpg">
+                    <a href="#"><img src="product3.jpg"></a>
                 </div>
                 <div class="workBx">
                     <img src="product4.jpg">
