--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -108,7 +108,7 @@
             </div>
             <div class="content">
                 <div class="workBx">
-                    <a href="DigitalClock.html" target="_blank"><img src="product1.jpg"></a>
+                    <a href="DigitalClock.html" target="_blank"><img src="digitalclock.jpg"></a>
                 </div>
                 <div class="workBx">
                     <a href="calculator.html" target="_blank"><img src="product2.jpg"></a>
