--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -111,10 +111,10 @@
                     <a href="DigitalClock.html" target="_blank"><img src="digitalclock.jpg"></a>
                 </div>
                 <div class="workBx">
-                    <a href="calculator.html" target="_blank"><img src="product2.jpg"></a>
+                    <a href="calculator.html" target="_blank"><img src="calculator.jpg"></a>
                 </div>
                 <div class="workBx">
-                    <a href="todo.html" target="_blank"><img src="product3.jpg"></a>
+                    <a href="todo.html" target="_blank"><img src="todo.jpg"></a>
                 </div>
                 <div class="workBx">
                     <img src="product4.jpg">
