--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -59,7 +59,7 @@
         </section>
         <section class="services" id="services">
             <div class="heading white">
-                <h2>Our Services</h2>
+                <h2>Services</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="content">
@@ -103,7 +103,7 @@
         </section>
         <section class="work" id="work">
             <div class="heading">
-                <h2>Our Latest Works</h2>
+                <h2>Latest Works</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="content">
@@ -148,7 +148,7 @@
         </section>
         <section class="contact" id="contact">
             <div class="heading">
-                <h2>Contact Us</h2>
+                <h2>Contact</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="content">
