--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Krish's Todo List</h1>
+        <h1>K.M's Todo List</h1>
     </header>
     <form>
         <input type="text" class="todo-input">
