--- a/fruitapp.html
+++ b/fruitapp.html
@@ -21,7 +21,7 @@
                 <input type="text" name="quantity" id="quantity" class="form-control">
             </div>
             <div class="form-group">
-                <label>Id</label>
+                <label>Amount (Rs)</label>
                 <input type="text" name="id" id="id" class="form-control">
             </div>
             <div>
