Fruit_app_update

--- a/fruitapp.html
+++ b/fruitapp.html
@@ -34,7 +34,7 @@
                 <tr>
                     <th>Fruit</th>
                     <th>Quantity (g)</th>
-                    <th>Id</th>
+                    <th>Amount (Rs)</th>
                     <th>Edit</th>
                     <th>Del</th>
                 </tr>
