--- a/fruitapp.html
+++ b/fruitapp.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
     <title>My Fruitlist App</title>
 </head>
-<body>
+<body style="background-image: linear-gradient(90deg, #72f28e, #59b3b9)">
     <div class="container mt-4">
         <h1 class="display-4 text-center"><i class="fas fa-apple-alt"></i>My<span class="text-primary">Fruit</span>List</h1><br>
         <!--Form-->
@@ -36,7 +36,7 @@
                     <th>Quantity (g)</th>
                     <th>Amount (Rs)</th>
                     <th>Edit</th>
-                    <th>Del</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody>
