--- a/kmportfolio.html
+++ b/kmportfolio.html
@@ -117,7 +117,7 @@
                     <a href="todo.html" target="_blank"><img src="todo.jpg"></a>
                 </div>
                 <div class="workBx">
-                    <img src="product4.jpg">
+                    <a href="fruitapp.html" target="_blank"><img src="fruitapp.jpg"></a>
                 </div>
             </div>
             <div class="heading">
