--- a/stickynote.html
+++ b/stickynote.html
@@ -11,7 +11,9 @@
     <title>Sticky Note App</title>
 </head>
 <body>
-    <h1>My Sticky Notes</h1>
+    <header>
+        <h2 data-text="MyStickyNotes">MyStickyNotes</h2>
+    </header>
     <button id="btnNew">New Note</button>
     <span class="gradient1 box"></span>
     <span class="gradient2 box"></span>
@@ -19,6 +21,7 @@
     <span class="gradient4 box"></span>
     <span class="gradient5 box"></span>
     <span class="gradient6 box"></span>
+    <span class="gradient7 box"></span>
     <div id="container"></div>
     <script src="stickynote.js"></script>
 </body>
